--- a/main.css
+++ b/main.css
@@ -1,4 +1,46 @@
 
-body {
-  font-family: 'Times New Roman', Times, serif;
+header {
+  background-color: rgb(22, 51, 109);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+header h1 {
+  font-size: 1.5rem; 
+}
+
+nav{
+  background-color: rgb(212, 92, 42);
+}
+
+nav ul {
+  display: flex;
+  justify-content: center;
+  justify-content: space-around;
+  list-style: none;
+}
+
+nav ul a {
+  color: white;
+  text-decoration: none;
+}
+
+nav ul a:hover {
+  background-color:rgb(22, 51, 109) ;
+  border-radius: 1rem;
+}
+
+main {
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 1rem 2rem;
+  font-size: 1.25rem;
+  line-height: 1.3;
+}
+
+img {
+  max-width: 100%;
+  max-height: 100%;
 }
