--- a/main.css
+++ b/main.css
@@ -1,4 +1,8 @@
 
+body {
+  background-color: rgb(212, 92, 42);
+}
+
 header {
   background-color: rgb(212, 92, 42);
   display: flex;
@@ -6,17 +10,17 @@ header {
   align-items: center;
 }
 .headerimage {
-  max-width: 30%;
+  max-width: 50%;
   max-height: 30%;
   justify-content: space-evenly
 }
 
-
-
 header h1 {
-  font-size: 200%; 
+  font-size: 400%; 
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   color: white;
+  padding-left: 4rem;
+  padding-right: 4rem;
 }
 
 nav{
@@ -49,9 +53,37 @@ main {
 }
 main p {
   font-size: 80%;
+  background-color: beige;
+  background-image: url(background.PNG);
+  background-size: 1.5rem;
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
 
 img {
   max-width: 100%;
   max-height: 100%;
 }
+
+ .podcast-logo {
+max-width: 25%;
+max-height: 25%;
+}
+
+main ul a {
+  color: black;
+text-decoration: none;
+}
+
+main ul a:hover {
+  background-color: rgb(22, 51, 109);
+  border-radius: 1rem;
+  color: white;
+}
+
+ul li a {
+  text-decoration: none;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
