--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 
-body {
+.wrapper {
   background-color: rgb(212, 92, 42);
 }
 
@@ -18,6 +18,7 @@ header {
 header h1 {
   font-size: 400%; 
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-style: italic;
   color: white;
   padding-left: 4rem;
   padding-right: 4rem;
@@ -85,5 +86,9 @@ ul li a {
   text-decoration: none;
   flex-wrap: wrap;
   justify-content: space-around;
+}
+
+.left-column {
+  
 }
 
