--- a/main.css
+++ b/main.css
@@ -12,6 +12,7 @@ header {
 .headerimage {
   max-width: 50%;
   max-height: 30%;
+  object-fit: cover;
   justify-content: space-evenly
 }
 
@@ -19,7 +20,7 @@ header h1 {
   font-size: 400%; 
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-style: italic;
-  color: white;
+  color: rgb(22, 51, 109);
   padding-left: 4rem;
   padding-right: 4rem;
 }
@@ -87,8 +88,26 @@ ul li a {
   flex-wrap: wrap;
   justify-content: space-around;
 }
-
-.left-column {
-  
+footer {
+  background-color:rgb(22, 51, 109);
+  padding: 1em;
+  display: flex;
+  gap: 10px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 0.7rem;
+  letter-spacing: 0.6px;
 }
+
+.footerimage{
+  width: 10px;
+height: auto;
+filter: drop-shadow(0 0 5px #00ffff);
+}
+
+
+
+
+
+
+
 
